--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "hello-world",
+  "name": "chat",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.4",
-    "expo": "^45.0.8",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
+    "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-native": "^0.68.2",
-    "react-native-animated-component": "^0.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
-    "react-native-gifted-chat": "^1.0.4",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
