--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.0.1",
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "cookies": "^0.8.0",
     "expo": "~47.0.3",
+    "expo-image-picker": "~14.0.1",
+    "expo-location": "~15.0.1",
+    "expo-permissions": "~14.0.0",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^8.10.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-maps": "^1.3.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
+    "react-navigation": "^4.4.4",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
